# CLdroid

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/nsaini/cldroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/nsaini/cldroid/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nsaini/cldroid/: ExampleUnitTest.java
